<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="35dp"
        android:text="@string/welcomeNote"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/purple_500"
        />
    <TextView

        android:id="@+id/option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:text="@string/options"
        android:textSize="25dp"
        android:textColor="@color/purple_200"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/weight"
        android:layout_width="400dp"
        android:layout_height="60dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/option"
        android:drawableLeft="@mipmap/img_weight"

        android:text="@string/weight"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/length"
        android:layout_width="400dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight"
        android:layout_marginTop="5dp"
        

        android:drawableLeft="@mipmap/img_length"

        android:text="@string/length"
        android:textSize="20sp"
        android:textStyle="bold" />
    <!--
    <Button
        android:id="@+id/speed"
        android:layout_width="400dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/length"
        android:layout_marginTop="5dp"

        android:drawableLeft="@mipmap/img_speed"
        android:text="@string/speed"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/currency"
        android:layout_width="400dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/speed"
        android:layout_marginTop="5dp"


        android:drawableLeft="@mipmap/img_currency"

        android:text="@string/currency"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/volume"
        android:layout_width="400dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currency"
        android:layout_marginTop="5dp"

        android:drawableLeft="@mipmap/img_volume"
        android:text="@string/volume"
        android:textSize="20sp"
        android:textStyle="bold"
        />


    <Button
        android:id="@+id/temperature"
        android:layout_width="400dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/volume"
        android:layout_marginTop="5dp"

        android:drawableLeft="@mipmap/img_temp"

        android:text="@string/temp"
        android:textSize="20sp"
        android:textStyle="bold"
        />
        -->
    <Button
        android:id="@+id/BMI"
        android:layout_width="400dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        android:drawableLeft="@mipmap/img_bmi"
        android:layout_marginTop="20dp"
        android:text="@string/BMI"
        android:textSize="20sp"
        android:textStyle="bold"/>
<!--        app:layout_constraintTop_toBottomOf="@id/temperature"-->

</androidx.constraintlayout.widget.ConstraintLayout>